--- a/wiki/pages/attributions.html
+++ b/wiki/pages/attributions.html
@@ -1,22 +1,28 @@
-{% extends "layout.html" %}
-  
-{% block title %}Attributions{% endblock %}
-{% block lead %}This page must show the attribution form of your project. This includes the work done by each of the student members on your team and any work that was done by people outside of your team, including the host labs, advisors, instructors, and individuals not on the team roster. This requirement is not about literature references - these can and should be displayed throughout your wiki.{% endblock %}
+<html>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="license" href="https://creativecommons.org/licenses/by/4.0/"/>
+    <!-- CSS Files -->
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" href="{{ url_for('static', filename='common-waves.css') }}">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+      <body style="background: linear-gradient(180deg, #4BD9E8 6%, #108EAF 57%, #005C74 96%);">
+        <div class="bar">  
+          {% include '../my-navbar.html' %}
+          </div>
 
-{% block page_content %}
-
-<div class="row mt-4">
-  <div class="col">
-    <div class="bd-callout bd-callout-info">
-      <h4>Bronze Medal Criterion #2</h4>
-      <p>Describe what work your team members did and what other people did for your project.</p>
-      <p>The form that has been embedded in an iframe in this page shows your team's Project Attribution form. This page must keep the form as it is.</p>
-      <p>If you use a different website framework, make sure to embed the right URL for your team's form.</p>
-      <hr>
-      <p>Please see the <a href="https://competition.igem.org/deliverables/project-attribution">Project Attribution page</a> for more information.</p>
-    </div>
-  </div>
-</div>
+          <div class="banner">
+            <header>
+              <img src= "https://static.igem.wiki/teams/4641/wiki/waves/wave-1.svg" />
+              <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-2.svg" />
+              <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-3.svg" />
+              <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-4.svg" />
+              <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-5.svg" id="shape" />
+              <h1>Collaborations</h1>
+            </header>
+          </div>
 
 <!--
   ======================================================================
@@ -26,25 +32,32 @@
   WILL BE DISPLAYED ON THIS PAGE. DO NOT REMOVE IT, OTHERWISE YOU RISK OF
   NOT MEETING BRONZE MEDAL CRITERION #2
  -->
-<div class="row mt-4">
-  <script type="text/javascript">
-    // Listen to size change and update form height
-    window.addEventListener('message', function (e) {
-      const {type, data} = JSON.parse(e.data);
-      if (type === 'igem-attribution-form') {
-        const element = document.getElementById('igem-attribution-form')
-        element.style.height = data + 50 +'px'
-      }
-    });
-  </script>
-  <iframe
-    style='width: 100%'
-    id="igem-attribution-form"
-    src="https://attributions.igem.org?team=MIT-MAHE&year=2023"
-  >
-  </iframe>
-  <!-- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
+          <div class="row mt-4">
+            <script type="text/javascript">
+              // Listen to size change and update form height
+              window.addEventListener('message', function (e) {
+                const {type, data} = JSON.parse(e.data);
+                if (type === 'igem-attribution-form') {
+                  const element = document.getElementById('igem-attribution-form')
+                  element.style.height = data + 50 +'px'
+                }
+              });
+            </script>
+            <iframe
+              style='width: 100%'
+              id="igem-attribution-form"
+              src="https://attributions.igem.org?team=MIT-MAHE&year=2023"
+            >
+            </iframe>
+            <!-- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
 
-</div>
+          </div>
 
-{% endblock %}
+      </body>
+      <!-- Footer -->
+  {% include '../my-footer.html' %}
+  <!-- Footer -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  </html>
