--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -10,7 +10,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
       <body style="background: linear-gradient(180deg, #4BD9E8 6%, #108EAF 57%, #005C74 96%);">
         <div class="bar">  
-          {% include '../my-navbar.html' %}
+          <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4BD9E8;">
+              <a class="navbar-brand" href="#">MIT-MAHE</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item dropdown">
+                      <a class="nav-link" href="{{ url_for('pages', page='home') }}">
+                        Home
+                      </a>
+                  </li>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Team
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
+                        <a class="dropdown-item" href="{{ url_for('pages', page='team') }}">Meet the Team</a>
+                        <a class="dropdown-item" href="{{ url_for('pages', page='attributions') }}">Attributions</a>
+                      </div>
+                  </li>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Project
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
+                        <a class="dropdown-item" href="{{ url_for('pages', page='contribution') }}">Contributions</a>
+                        <a class="dropdown-item" href="{{ url_for('pages', page='description') }}">Description</a>
+                        <a class="dropdown-item" href="{{ url_for('pages', page='project-design') }}">Design</a>
+                        <a class="dropdown-item" href="{{ url_for('pages', page='engineering') }}">Engineering Success</a>
+                        <a class="dropdown-item" href="{{ url_for('pages', page='experiments') }}">Experiments</a>
+                        <a class="dropdown-item" href="{{ url_for('pages', page='hardware') }}">Hardware</a>
+                        <a class="dropdown-item" href="{{ url_for('pages', page='project-implementation') }}">Implementation</a>
+                        <a class="dropdown-item" href="{{ url_for('pages', page='model') }}">Modeling</a>
+                        <a class="dropdown-item" href="{{ url_for('pages', page='project-parts') }}">Parts</a>
+                      </div>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Engagement
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
+                      <a class="dropdown-item" href="{{ url_for('pages', page='engagement-collaborations') }}">Collaborations</a>
+                      <a class="dropdown-item" href="{{ url_for('pages', page='engagement-communityengagement') }}">Community Engagement</a>
+                      <a class="dropdown-item" href="{{ url_for('pages', page='education') }}">Education</a>
+                      <a class="dropdown-item" href="{{ url_for('pages', page='inclusivity') }}">Inclusivity</a>
+                      <a class="dropdown-item" href="{{ url_for('pages', page='human-practices') }}">Integrated Human Practices</a>
+                      <a class="dropdown-item" href="{{ url_for('pages', page='engagement-partnership') }}">Partnership</a>
+                      <a class="dropdown-item" href="{{ url_for('pages', page='engagement-sciencecommunication') }}">Science Communication</a>
+                      
+                    </div>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Awards
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
+                      <a class="dropdown-item" href="{{ url_for('pages', page='awards-part') }}">Part</a>
+                      <a class="dropdown-item" href="{{ url_for('pages', page='awards-model') }}">Model</a>
+                      <a class="dropdown-item" href="{{ url_for('pages', page='awards-inclusivity') }}">Inclusivity</a>
+                      <a class="dropdown-item" href="{{ url_for('pages', page='awards-education') }}">Education</a>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+
           </div>
 
           <div class="banner">
@@ -138,7 +204,36 @@
 
       </body>
             <!-- Footer -->
-  {% include '../my-footer.html' %}
+  <footer class="text-center text-white" style="background-color: #000000; bottom: 0; width: 100%;">
+    <!-- Grid container -->
+    <div class="container p-2">
+
+      <!-- Section: Social media -->
+      <section class="mb-2">
+    
+        <!-- Google -->
+        <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39" href="#!" role="button"><i class="bi bi-envelope"></i></a>
+
+        <!-- Instagram -->
+        <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="https://www.instagram.com/manipalbiomachines/" role="button"><i class="bi bi-instagram"></i></a>
+
+        <!-- Linkedin -->
+        <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="https://www.linkedin.com/company/manipal-biomachines/" role="button"><i class="bi bi-linkedin"></i></a>
+        <!-- Github -->
+        <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="https://gitlab.igem.org/2023/mit-mahe/-/blob/main/wiki/pages/engagement-collaborations.html?ref_type=heads" role="button"><i class="bi bi-github"></i></a>
+      </section>
+      <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2)">
+      © 2023 - Content on this site is licensed under a Creative Commons Attribution 4.0 International license.
+    </div>
+    <!-- Copyright -->
+
+</footer>
+
   <!-- Footer -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
