--- a/wiki/my-layout.html
+++ b/wiki/my-layout.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
       <body style="background: #FFFFFF;">
         <!-- Navbar -->
-          <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4BD9E8;">
+          <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #4BD9E8;">
               <a class="navbar-brand" href="#">MIT-MAHE</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -52,25 +52,15 @@
                       Engagement
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
-                      <a class="dropdown-item" href="{{ url_for('pages', page='engagement-collaborations') }}">Collaborations</a>
-                      <a class="dropdown-item" href="{{ url_for('pages', page='engagement-communityengagement') }}">Community Engagement</a>
+                      <a class="dropdown-item" href="{{ url_for('pages', page='human-practices') }}">Human Practices</a>
+
                       <a class="dropdown-item" href="{{ url_for('pages', page='education') }}">Education</a>
+
                       <a class="dropdown-item" href="{{ url_for('pages', page='inclusivity') }}">Inclusivity</a>
-                      <a class="dropdown-item" href="{{ url_for('pages', page='human-practices') }}">Integrated Human Practices</a>
-                      <a class="dropdown-item" href="{{ url_for('pages', page='engagement-partnership') }}">Partnership</a>
-                      <a class="dropdown-item" href="{{ url_for('pages', page='engagement-sciencecommunication') }}">Science Communication</a>
+
+                      <a class="dropdown-item" href="{{ url_for('pages', page='engagement-collaborations') }}">Collaborations</a>
                       
-                    </div>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Awards
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
-                      <a class="dropdown-item" href="{{ url_for('pages', page='awards-part') }}">Part</a>
-                      <a class="dropdown-item" href="{{ url_for('pages', page='awards-model') }}">Model</a>
-                      <a class="dropdown-item" href="{{ url_for('pages', page='awards-inclusivity') }}">Inclusivity</a>
-                      <a class="dropdown-item" href="{{ url_for('pages', page='awards-education') }}">Education</a>
+                      
                     </div>
                   </li>
                 </ul>
