--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -9,40 +9,68 @@
             <div class="d-flex flex-column flex-shrink-0 p-1 bg-light" id="saveme" style="width: 200px; height: 100vh; overflow-y: auto; position:fixed;">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
               <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-              <span class="fs-4">Sidebar</span>
             </a>
             <hr>
             <ul class="nav nav-pills flex-column mb-auto">
               <li class="nav-item">
-                <a href="#" class="nav-link active" aria-current="page">
+                <a href="#section1" class="nav-link link-dark" aria-current="page">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
-                  Home
+                  1. iGEM ABOA
                 </a>
               </li>
               <li>
-                <a href="#" class="nav-link link-dark">
+                <a href="#section2" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
-                  Dashboard
+                  2. Maastricht iGEM
                 </a>
               </li>
               <li>
-                <a href="#" class="nav-link link-dark">
+                <a href="#section3" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"/></svg>
-                  Orders
+                  Penn State iGEM
                 </a>
               </li>
               <li>
-                <a href="#" class="nav-link link-dark">
+                <a href="#section4" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
-                  Products
+                  4. iGEM McGill
                 </a>
               </li>
               <li>
-                <a href="#" class="nav-link link-dark">
+                <a href="#section5" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-                  Customers
+                  5. iGEM IISER Bhopal
                 </a>
               </li>
+
+              <li>
+                <a href="#section6" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+                  6. iGEM NTHU
+                </a>
+              </li>
+
+              <li>
+                <a href="#section7" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+                  7. OUC-China
+                </a>
+              </li>
+
+              <li>
+                <a href="#section8" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+                  8. iGEM IIT-Delhi
+                </a>
+              </li>
+
+              <li>
+                <a href="#section9" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+                  9. iGEM Dusseldorf
+                </a>
+              </li>
+
             </ul>
           </div>
         </div>
