--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -27,7 +27,7 @@
               <li>
                 <a href="#section3" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"/></svg>
-                  Penn State iGEM
+                  3. Penn State iGEM
                 </a>
               </li>
               <li>
@@ -116,7 +116,7 @@
                         </div>
                       </div>
                     </div>
-                    <p class="mt-3" style="font-family: 'Montserrat', sans-serif; font-size: 27px;" id="section6">6. iGEM NTHU, NTHU, Taiwan- map (August 2023)<br></p>
+                    <p class="mt-3 MAIN-STUFF" id="section6">6. iGEM NTHU, NTHU, Taiwan- map (August 2023)<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> The iGEM map collaboration initiated by NTHU Taiwan allowed the personification of our projects- a unique perspective that draws the parallel between the various components that can be viewed as imperative characters in our story- our project. MIT-MAHE chose to present CarbanEl, our main solution enzyme as the character for the map- the hero of our story. The map lets the teams find out about other teams’ projects while telling a story about their own projects- using the logos and other parts as metaphors. </p>
                     <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/penn-state.jpg" class="img-responsive rounded mx-auto d-block mt-4">
                     <p class="mt-3 MAIN-STUFF" id="section7">7. OUC-China, Ocean University of China, China- picture book (August 2023)<br></p>
