--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -11,63 +11,63 @@
               <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
             </a>
             <hr>
-            <ul class="nav nav-pills flex-column mb-auto">
+            <ol class="nav nav-pills flex-column mb-auto">
               <li class="nav-item">
                 <a href="#section1" class="nav-link link-dark" aria-current="page">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
-                  1. iGEM ABOA
+                  Overview
                 </a>
               </li>
               <li>
                 <a href="#section2" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
-                  2. Maastricht iGEM
+                  High School Students
                 </a>
               </li>
               <li>
                 <a href="#section3" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"/></svg>
-                  Penn State iGEM
+                  Middle School Students
                 </a>
               </li>
               <li>
                 <a href="#section4" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
-                  4. iGEM McGill
+                  Primary School Students
                 </a>
               </li>
               <li>
                 <a href="#section5" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-                  5. iGEM IISER Bhopal
+                  Collegiate Students
                 </a>
               </li>
 
               <li>
                 <a href="#section6" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-                  6. iGEM NTHU
+                  Working Professionals
                 </a>
               </li>
 
               <li>
                 <a href="#section7" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-                  7. OUC-China
+                  Community Educations
                 </a>
               </li>
 
               <li>
                 <a href="#section8" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-                  8. iGEM IIT-Delhi
+                  Specially-Abled People
                 </a>
               </li>
 
               <li>
                 <a href="#section9" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-                  9. iGEM Dusseldorf
+                  Our Takeaway
                 </a>
               </li>
 
